--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit>=1.33
-pandas>=2.0
-numpy>=1.24
-scikit-learn>=1.1
-joblib>=1.2
+# requirements.txt (pin to training environment)
+streamlit==1.36.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2
+joblib==1.3.2
